Compiler/tests/typing/bad/testfile-borrow_mut-7.rs

fn bar(v: Vec<&mut i32>) { return; }
fn main() { let x : i32 = 42; bar(vec![& x]); return; }
